Add dall-e and whisper

--- a/openai/.env.example
+++ b/openai/.env.example
@@ -4,3 +4,11 @@ AZURE_OPENAI_ENDPOINT=
 SEARCH_ENDPOINT=
 SEARCH_INDEX_NAME=
 SEARCH_KEY=
+
+OPENAI_API_VERSION_DALL_E_3=2023-12-01-preview
+AZURE_OPENAI_KEY_DALL_E_3=
+AZURE_OPENAI_ENDPOINT_DALL_E_3=
+
+OPENAI_API_VERSION_WHISPER=2023-09-01-preview
+AZURE_OPENAI_KEY_WHISPER=
+AZURE_OPENAI_ENDPOINT_WHISPER=
