--- a/openai/.env.example
+++ b/openai/.env.example
@@ -1,14 +1,19 @@
-OPENAI_API_VERSION=2023-05-15
+OPENAI_API_VERSION=2024-02-01
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_ENDPOINT=
+
 SEARCH_ENDPOINT=
 SEARCH_INDEX_NAME=
 SEARCH_KEY=
 
-OPENAI_API_VERSION_DALL_E_3=2023-12-01-preview
+OPENAI_API_VERSION_DALL_E_3=2024-02-01
 AZURE_OPENAI_KEY_DALL_E_3=
 AZURE_OPENAI_ENDPOINT_DALL_E_3=
 
-OPENAI_API_VERSION_WHISPER=2023-09-01-preview
+OPENAI_API_VERSION_WHISPER=2024-02-01
 AZURE_OPENAI_KEY_WHISPER=
 AZURE_OPENAI_ENDPOINT_WHISPER=
+
+OPENAI_API_VERSION_GPT4O=2024-02-01
+AZURE_OPENAI_KEY_GPT4O=
+AZURE_OPENAI_ENDPOINT_GPT4O=
