Add crewai examples

--- a/crewai/.env.example
+++ b/crewai/.env.example
@@ -1,4 +1,6 @@
-OPENAI_API_TYPE=azure
-OPENAI_API_VERSION=2023-12-01-preview
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_API_KEY=
+SERPER_API_KEY=""
+BROWSERLESS_API_HOST="http://localhost:3000"
+BROWSERLESS_API_KEY=""
+AZURE_OPENAI_VERSION="2024-10-21"
+AZURE_OPENAI_ENDPOINT="https://your_endpoint_name.openai.azure.com/"
+AZURE_OPENAI_KEY="your_key_here"
