--- a/crewai/.env.example
+++ b/crewai/.env.example
@@ -1,6 +1,10 @@
-SERPER_API_KEY=""
-BROWSERLESS_API_HOST="http://localhost:3000"
-BROWSERLESS_API_KEY=""
-AZURE_OPENAI_VERSION="2024-10-21"
-AZURE_OPENAI_ENDPOINT="https://your_endpoint_name.openai.azure.com/"
-AZURE_OPENAI_KEY="your_key_here"
+SERPER_API_KEY=
+BROWSERLESS_API_HOST=
+BROWSERLESS_API_KEY=
+AZURE_API_VERSION="2024-10-21"
+AZURE_API_BASE=
+AZURE_API_KEY=
+SEC_API_API_KEY=
+SERPER_API_KEY=
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
